      direkt den Menü-Manager auf. Dies ist nützlich zum Bootstrappen wenn es
      noch kein Menü gibt oder auch wenn der Menü-Manager nicht im
      WollMuxBar-Menü vorhanden ist. (Dieses Feature ist nur verfügbar, wenn
      der WollMux mit Java 6 ausgeführt wird!)
    * Unter Extras-Optionen kann die Fontgröße bis zu Faktor 10 eingestellt werden.


 ==================== Neu in Version 10.8 RC ====================

    * Hinweis: Grundsätzlich sollten Sie bei einem Update auf eine neue
      WollMux-Version immer sowohl die WollMux-Extension (.oxt) als auch die
      WollMuxBar (WollMuxBar.jar) auf die neue Version updaten. Tun Sie dies
      nicht, so kann es in dieser Version des WollMux zu Anzeigefehlern in der
      Senderbox der WollMuxBar kommen!
    * Bugfixes:
          o Ein Problem wurde behoben, das bei der Weiterverwendung eines
            OpenOffice.org-Fensters auftrat, in dem zuvor ein Textdokument
            geöffnet war, das über Datei->Schließen bzw. den kleinen "X"-
            Knopf geschlossen wurde. Wurde in diesem leeren Fenster ein neues
            Dokument (z.B. ein Calc-Dokument) aufgemacht, so konnte dieses
            Dokument nicht mit Datei->Drucken ausgedruckt werden.
          o In sehr seltenen Fällen konnte es in früheren WollMux-Versionen
            bei Verwendung von overrideFrag-Kommandos ohne NEW_FRAG_ID zu
            Abstürzen kommen. Dieses Problem ist nun behoben.
          o Der Windows-Uninstaller des WollMux kann nun auch ausgeführt
            werden, wenn kein OpenOffice.org auf dem System installiert ist. In
            diesem Fall kann natürlich nicht die OpenOffice.Org-Extension
            (WollMux.oxt) deinstalliert werden, aber der Uninstaller räumt
            jetzt alle übrigen Dateien und Registry-Einträge des WollMux
            korrekt auf.
          o Der WollMux öffnet jetzt nur noch eine Formular-GUI, wenn die
            Vorlage im "Fenster"-Abschnitt ihrer Formularbeschreibung wirklich